# ghostlink

./: Cargo.toml  GHOSTLINK_V3_ASSESSMENT.md  INTEGRATION.md  README.md  ZNS_NEEDS.md  build.rs  test_x25519.rs
examples/: demo.rs  transport_demo.rs  zns_integration_demo.rs
proto/: ghostchain.proto  ghostid.proto  zns.proto
src/: cache.rs  client.rs  config.rs  crypto.rs  error.rs  lib.rs  main.rs  zns_integration.rs
src/crypto/: legacy_impl.rs  mod.rs  traits.rs
src/proto/: ghostchain.v1.rs  ghostid.v1.rs  mod.rs  zns.v1.rs
src/transport/: grpc.rs  http3.rs  manager.rs  mod.rs  quic.rs
src/zvm/: bindings.rs  contract.rs  execution.rs  mod.rs
tests/: integration_test.rs
