[package]
name = "ghostlink"
version = "0.3.0"
edition = "2024"
description = "Rust gRPC client for GhostChain ecosystem - blockchain, ZNS, ZVM, and GhostBridge integration"
license = "MIT"
repository = "https://github.com/ghostkellz/ghostlink"
authors = ["GhostChain Team"]

[features]
default = ["gcrypt", "quic"]
gcrypt = ["dep:gcrypt"]
zvm = []
zvm-integration = ["zvm"]
quic = ["dep:quinn"]
http3 = ["quic", "dep:h3", "dep:h3-quinn"]

[dependencies]
# Networking & gRPC
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
tokio = { version = "1.40", features = ["full"] }
tower = "0.5"
hyper = "1.5"
url = { version = "2.5", features = ["serde"] }

# QUIC & HTTP/3
quinn = { version = "0.11", optional = true, features = ["rustls"] }
h3 = { version = "0.0.6", optional = true }
h3-quinn = { version = "0.0.7", optional = true }
rustls = "0.23"
webpki-roots = "0.26"

# GhostChain Cryptography
gcrypt = { git = "https://github.com/ghostkellz/gcrypt", branch = "main", optional = true }

# Additional crypto for ZVM (until fully migrated to gcrypt)
sha2 = "0.10"

# Async & concurrency
futures = "0.3"
async-trait = "0.1"

# Caching
dashmap = "6.0"
lru = "0.12"

# CLI
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.12"

[lib]
name = "ghostlink"
path = "src/lib.rs"

[[bin]]
name = "ghostlink"
path = "src/main.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"
